# poc-project

./: .gitignore  CLAUDE.md  HELP.md  README.md  build.gradle.kts  docker-compose.yml  package.json  settings.gradle.kts
ai-orchestrator-lab/: .env.example  .gitignore  README.md  pyproject.toml
ai-orchestrator-lab/be/: ARCHITECTURE.md  README.md  build.gradle.kts  settings.gradle.kts
ai-orchestrator-lab/be/pinpoint/: .gitignore  README.md  jvm-options-example.md  pinpoint-agent.env.example  pinpoint-bootstrap.sh  verify-bootstrap.sh
ai-orchestrator-lab/devops/: .env.example  README.md  docker-compose.yml
ai-orchestrator-lab/devops/pinpoint/: .env  .env.example  README.md  docker-compose.yml  env.template  run-local.sh  stop-local.sh  verify-config.sh
ai-orchestrator-lab/docs/: agent_assignment.md  daily_capacity.md  orchestration_design.md  tech_doc_template.md  ticket_lifecycle.md
ai-orchestrator-lab/fe/: ARCHITECTURE.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
ai-orchestrator-lab/input/: prd.md
ai-orchestrator-lab/outputs/20260314-132818-159881/: events.ndjson  run_status.json
ai-orchestrator-lab/outputs/20260314-132818-160017/: 03_roadmap_update.md  07_parallel_plan.md  (+5 more)
ai-orchestrator-lab/plans/: 2026-03-13-pinpoint-tech-doc.md  2026-03-13-tickets.json  2026-03-13.md  2026-03-14-be-product-tech-doc.md  2026-03-14-fe-product-tech-doc.md  2026-03-14-test-design.md  2026-03-14-tickets.json  2026-03-14.md
ai-orchestrator-lab/scripts/: update_confluence_visual_docs.py
ai-orchestrator-lab/worktrees/: README.md
(+3277 files in other folders)
